[package]
name = "double-checked-cell-async"
version = "2.0.2" # remember to update html_root_url
authors = ["Stefan Kaufhold <cere@fastmail.fm>", "Niklas Fiekas <niklas.fiekas@backscattering.de>"]
license = "MIT/Apache-2.0"
keywords = ["lazy", "cell", "once", "async"]
readme = "README.md"
repository = "https://github.com/chrislearn/double-checked-cell-async"
categories = ["concurrency", "asynchronous"]
description = "A thread-safe lazily initialized cell using double-checked locking"
edition = "2018"

[dependencies]
void = "1.0"
unreachable = "1.0"
futures-util = "0.3.1"

[dev-dependencies]
tokio = { version = "0.2.2", features = ["macros", "rt-core", "fs", "io-util"] }
futures = "0.3.1"

[package.metadata.docs.rs]
all-features = true
